smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control-with-no-colon.smithy
// Parse error at line 4, column 1 near `$version `: Expected one of the following characters: [:]
namespace foo.baz

$version "0.5.0"
